# raytracer

./: CMakeLists.txt  README.md
.cache/clangd/index/: SDL.c.95EEB62CC9873BC0.idx  SDL.h.3B83F7AAE6B4F19B.idx  SDL_RLEaccel.c.FDEAFDBE2F88D28F.idx  SDL_RLEaccel_c.h.F1AE52B982B73490.idx  SDL_alsa_audio.c.04F125738D079252.idx  SDL_alsa_audio.h.BBD7E266E2BF7B60.idx  SDL_appid.c.BFC41D20CFC58704.idx  SDL_appid.h.0FA629EBAFF6B144.idx  SDL_assert.c.833D8BD46A810C31.idx  SDL_assert.h.4D67F54F16ADE760.idx  SDL_assert_c.h.1E7D0C3D6D3014D7.idx  SDL_atomic.c.9E89B414004EAAB7.idx  SDL_atomic.h.020B19D166D114D3.idx  SDL_audio.c.6185F79551B8601C.idx  SDL_audio.h.A8422F702BE49C9B.idx  SDL_audio_c.h.97E4250D27E2B911.idx  SDL_audio_channel_converters.h.503FC55184320A4F.idx  SDL_audiocvt.c.08003A28B90B696B.idx  SDL_audiodev.c.A2F4A71E84388BF8.idx  SDL_audioqueue.c.A3E63D960A3E6126.idx  SDL_audioqueue.h.E46A11172193E9BF.idx  SDL_audioresample.c.2CA6891E930BBBF0.idx  SDL_audioresample.h.1E68120CEDE9665D.idx  SDL_audiotypecvt.c.75709896BABF6C7E.idx  SDL_begin_code.h.BACE50C9867361E2.idx  SDL_bits.h.7DE95FD601E5CB67.idx  SDL_blendfillrect.c.44162E150E2C74F0.idx  SDL_blendfillrect.h.9166A3DB0E8F4DA3.idx  SDL_blendline.c.9B9EBDCE5CBD79E2.idx  SDL_blendline.h.3ABC6CF51EE432B5.idx  SDL_blendmode.h.B44DEAE8C19AFAF4.idx  SDL_blendpoint.c.8393C6B25699E912.idx  SDL_blendpoint.h.9CB403BF997FD4BB.idx  SDL_blit.c.C5C37C8598B476DA.idx  SDL_blit.h.F2C0EF925C6F153F.idx  (+608 more)
src/: Camera.cpp  Camera.h  Color.h  Hittable.cpp  Hittable.h  Interval.h  NumUtil.h  Ray.h  Renderer.cpp  Renderer.h  Vector3.h  main.cpp
